# lwdt

./: .gitignore  README.md  README.zh-cn.md  build.ninja  lwdt2h.py  out.txt  suggest.md
.github/workflows/: esp-idf-build.yml
components/drvfx/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/drvfx/drivers/i2c/: Kconfig  drivers.cmake  idf.c
components/drvfx/drivers/rtc/: Kconfig  ds1302.c  idf.c  pcf8563.c
components/drvfx/include/drvfx/kernel/: device.h  init.h
components/lwdt/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  lwdt2h.py
components/lwdt/boards/espressif/esp32-c3-devkitm-1/: board.lwdt
components/lwdt/boards/nologo/esp32-c3-supermini/: board.cmake  board.lwdt
components/lwdt/cmake/: lwdt_board.cmake
components/lwdt/drivers/i2c/: Kconfig  idf.c
components/lwdt/drivers/rtc/: Kconfig  drivers.cmake  ds1302.c  idf.c  pcf8563.c
components/lwdt/drivers/spi/: Kconfig  drivers.cmake  idf.c
components/lwdt/dt/: board.lwdt  board2.lwdt  board_complex.lwdt
components/lwdt/dt/soc/esp32/: esp32.lwdt  esp32c3.lwdt
components/lwdt/include/drvfx/drivers/: i2c.h  spi.h
components/lwdt/include/drvfx/kernel/: device.h  init.h  kernel.h
components/lwdt/include/lwdt/: lwdt.h
components/lwdt/kernel/: init.c  kernel.c
demo/: demo_dt.c
dt/: board.lwdt  board2.lwdt  board_complex.lwdt
dt/soc/esp32/: esp32.lwdt  esp32c3.lwdt
esp-idf-example/: CMakeLists.txt  README.md  sdkconfig.old
esp-idf-example/boards/: board.lwdt  esp32c3supermini.lwdt
esp-idf-example/cmake/: lwdt.cmake
esp-idf-example/main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main.c  idf_component.yml
example/: .gitignore  CMakeLists.txt  README.md  board.lwdt  esp32c3supermini.lwdt  sdkconfig  sdkconfig.nologo_esp32-c3-supermini
example/boards/: esp32.lwdt  esp32s3devkitc.lwdt
example/boards/espressif/esp32-devkitc-1/: board.cmake
example/boards/espressif/esp32-s3-devkitc-1/: board.cmake
example/boards/nologo/esp32-c3-supermini/: .lwdt.overlay
example/main/: CMakeLists.txt  blink_example_main.c  subsys1.c
include/: lwdt.h
tests/: test_drvfx_init.py  test_example_boards.py  test_lwdt2h.py
